basics/Ingress/basic-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
spec:
  backend:
    serviceName: svc-webserver
    servicePort: 80
